# onotes-frontend

./: .gitignore  .gitmodules  Cargo.toml  test.db
src/: main.rs
src/api/: edge.rs  history.rs  mod.rs  post.rs  token.rs  user.rs
src/routes/: catch.rs  history.rs  index.rs  mod.rs  post.rs
static/: cookies.js  edit.js  libs.js  style.css
static/js/: config-example.js  edit.js  libs.js  offline.js  online.js  sw.js
static/libs/wasm-markdown-0.0.1/: wasm_markdown.d.ts  wasm_markdown.js  wasm_markdown_bg.wasm
static/markdown/: wasm_markdown_bg.wasm.d.ts
templates/: base.html.tera  edit.html.tera  histories.html.tera  history.html.tera  history_macros.html.tera  index.html.tera  login.html.tera  macros.html.tera  post.html.tera
templates/error/: 404.html.tera
