[package]
name = "notes-fronted"
version = "0.1.0"
authors = ["Woshiluo Luo <woshiluo.luo@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


# Notes
notes-lib = { git = "https://git.nas.wsl/Onotes/notes-lib" }

# Diesel for SQL
diesel = { version = "1.4.4", features = ["mysql"] }

# Serde for json
serde_json = "1.0"
serde = "1.0"
serde_derive = "1.0"

# Markdown
pulldown-cmark = { git = "https://github.com/NovaOJ/pulldown-cmark", branch = "Math" }

# For time 
chrono = "0.4.19"

# Rocket Webserver
rocket = { git = "https://github.com/SergioBenitez/Rocket", features = [ "tls", "json" ] }

[dependencies.rocket_dyn_templates]
git = "https://github.com/SergioBenitez/Rocket"
default-features = false
features = ["tera"]

[dependencies.rocket_sync_db_pools]
git = "https://github.com/SergioBenitez/Rocket"
default-features = false
features = ["diesel_mysql_pool"]
